--- a/MSP430AppDemo001/MSP430AppDemo001.vcxproj.filters
+++ b/MSP430AppDemo001/MSP430AppDemo001.vcxproj.filters
@@ -48,6 +48,7 @@
     <None Include="MCU.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Uart.h">
